--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   firebase_crashlytics_platform_interface: 3.6.16
   firebase_dynamic_links: 5.4.8
   firebase_dynamic_links_platform_interface: 0.2.6+16
+  firebase_messaging: 14.7.8
+  firebase_messaging_platform_interface: 4.5.17
+  firebase_messaging_web: 3.5.17
   firebase_performance: 0.9.3+8
   firebase_performance_platform_interface: 0.1.4+16
   firebase_performance_web: 0.1.4+16
@@ -93,7 +96,10 @@ dependencies:
   pin_code_fields: 8.0.1
   plugin_platform_interface: 2.1.6
   provider: 6.0.5
+  rive: 0.12.2
+  rive_common: 0.2.8
   rxdart: 0.27.7
+  share_plus: 7.2.1
   shared_preferences: 2.2.2
   shared_preferences_android: 2.2.1
   shared_preferences_foundation: 2.3.4
