--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,7 +41,18 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
       config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
-      
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+
+        # dart: PermissionGroup.camera
+        'PERMISSION_CAMERA=1',
+
+        # dart: PermissionGroup.photos
+        'PERMISSION_PHOTOS=1',
+
+        # dart: PermissionGroup.notification
+        'PERMISSION_NOTIFICATIONS=1',
+      ]
     end
   end
 end
