--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -59,7 +59,8 @@
     <string>In order to take a picture or video, this app requires permission to access the camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
     <string>In order to upload data, this app requires permission to access the photo library.</string>
-
+	<key>PermissionGroupNotification</key>
+    <string>We only send you notifications about updates relevant to you.</string>
     <key>UIBackgroundModes</key>
     <array>
         <string>fetch</string>
