--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,57 +28,61 @@ dependencies:
   algolia: 1.1.1
   auto_size_text: 3.0.0
   badges: 2.0.2
-  cached_network_image: 3.2.1
-  cloud_firestore: 4.13.1
-  cloud_firestore_platform_interface: 6.0.5
-  cloud_firestore_web: 3.8.5
-  cloud_functions: 4.5.8
-  cloud_functions_platform_interface: 5.5.11
-  cloud_functions_web: 4.6.11
-  collection: 1.17.2
+  cached_network_image: 3.3.1
+  cloud_firestore: 4.15.7
+  cloud_firestore_platform_interface: 6.1.8
+  cloud_firestore_web: 3.10.7
+  cloud_functions: 4.6.7
+  cloud_functions_platform_interface: 5.5.18
+  cloud_functions_web: 4.7.1
+  collection: 1.18.0
   country_picker:
+  csv: 5.0.1
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
   equatable: 2.0.5
+  expandable: 5.0.1
   file_picker: 6.1.1
-  firebase_analytics: 10.7.4
-  firebase_analytics_platform_interface: 3.8.4
-  firebase_analytics_web: 0.5.5+11
-  firebase_auth: 4.15.2
-  firebase_auth_platform_interface: 7.0.8
-  firebase_auth_web: 5.8.11
-  firebase_core: 2.24.2
+  firebase_analytics: 10.8.8
+  firebase_analytics_platform_interface: 3.9.8
+  firebase_analytics_web: 0.5.5+20
+  firebase_auth: 4.17.7
+  firebase_auth_platform_interface: 7.1.7
+  firebase_auth_web: 5.9.7
+  firebase_core: 2.26.0
   firebase_core_platform_interface: 5.0.0
-  firebase_core_web: 2.10.0
-  firebase_crashlytics: 3.4.8
-  firebase_crashlytics_platform_interface: 3.6.16
-  firebase_dynamic_links: 5.4.8
-  firebase_dynamic_links_platform_interface: 0.2.6+16
-  firebase_messaging: 14.7.8
-  firebase_messaging_platform_interface: 4.5.17
-  firebase_messaging_web: 3.5.17
-  firebase_performance: 0.9.3+8
-  firebase_performance_platform_interface: 0.1.4+16
-  firebase_performance_web: 0.1.4+16
-  firebase_storage: 11.5.5
-  firebase_storage_platform_interface: 5.1.3
-  firebase_storage_web: 3.6.17
+  firebase_core_web: 2.11.5
+  firebase_crashlytics: 3.4.17
+  firebase_crashlytics_platform_interface: 3.6.24
+  firebase_dynamic_links: 5.4.16
+  firebase_dynamic_links_platform_interface: 0.2.6+24
+  firebase_messaging: 14.7.18
+  firebase_messaging_platform_interface: 4.5.26
+  firebase_messaging_web: 3.6.7
+  firebase_performance: 0.9.3+16
+  firebase_performance_platform_interface: 0.1.4+24
+  firebase_performance_web: 0.1.4+24
+  firebase_storage: 11.6.8
+  firebase_storage_platform_interface: 5.1.11
+  firebase_storage_web: 3.7.2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
   flutter_keyboard_visibility: 5.2.0
   flutter_plugin_android_lifecycle: 2.0.17
+  flutter_secure_storage: 8.0.0
   flutter_spinkit: 5.2.0
   flutter_staggered_grid_view: 0.7.0
   flutter_svg: 2.0.9
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 7.1.1
-  google_fonts: 4.0.3
+  google_fonts: 6.1.0
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
   google_sign_in_ios: 5.6.4
   google_sign_in_platform_interface: 2.4.2
   google_sign_in_web: 0.12.1
+  http: 1.2.0
   image_picker: 1.0.4
   image_picker_android: 0.8.8
   image_picker_for_web: 3.0.1
@@ -88,14 +92,16 @@ dependencies:
   json_path: 0.6.2
   lottie: 2.7.0
   mime_type: 1.0.0
+  onesignal_flutter:
   page_transition: 2.1.0
   path_provider: 2.0.14
   path_provider_android: 2.0.25
   path_provider_foundation: 2.2.2
   path_provider_platform_interface: 2.0.6
   permission_handler: 10.0.0
+  photo_view: 0.14.0
   pin_code_fields: 8.0.1
-  plugin_platform_interface: 2.1.6
+  plugin_platform_interface: 2.1.8
   provider: 6.0.5
   rive: 0.12.2
   rive_common: 0.2.8
@@ -113,12 +119,13 @@ dependencies:
   sqflite: 2.2.6
   stream_transform: 2.1.0
   switcher_button:
+  synchronized: 3.1.0
   timeago: 3.2.2
   universal_io: 2.2.2
-  url_launcher: 6.1.10
-  url_launcher_android: 6.0.27
-  url_launcher_ios: 6.1.4
-  url_launcher_platform_interface: 2.1.2
+  url_launcher: 6.2.5
+  url_launcher_android: 6.3.0
+  url_launcher_ios: 6.2.5
+  url_launcher_platform_interface: 2.3.2
   video_player: 2.8.1
   video_player_android: 2.4.10
   video_player_avfoundation: 2.5.1
@@ -129,6 +136,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  http: 1.2.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: 0.13.1
