--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -10,7 +10,7 @@
     </array>
     <key>com.apple.developer.associated-domains</key>
     <array>
-      <string>applinks:theinspireai.com</string>
+      <string>applinks:app.theinspireai.com</string>
     </array>
 </dict>
 </plist>
