--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.0+2
+version: 2.1.7+4
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -66,6 +66,7 @@ dependencies:
   firebase_storage_platform_interface: 5.1.11
   firebase_storage_web: 3.7.2
   flutter_animate: 4.1.1+1
+  flutter_branch_sdk:
   flutter_cache_manager: 3.3.1
   flutter_keyboard_visibility: 5.2.0
   flutter_plugin_android_lifecycle: 2.0.17
