--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="inspireai" android:host="app.theinspireai.com" />
+                <data android:scheme="http" android:host="app.theinspireai.com" />
+                <data android:scheme="https" />
             </intent-filter>
 
         </activity>
