--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_core_web: 2.11.5
   firebase_crashlytics: 3.4.17
   firebase_crashlytics_platform_interface: 3.6.24
+  firebase_dynamic_links: 5.4.16
+  firebase_dynamic_links_platform_interface: 0.2.6+24
   firebase_messaging: 14.7.18
   firebase_messaging_platform_interface: 4.5.26
   firebase_messaging_web: 3.6.7
@@ -64,7 +66,6 @@ dependencies:
   firebase_storage_platform_interface: 5.1.11
   firebase_storage_web: 3.7.2
   flutter_animate: 4.1.1+1
-  flutter_branch_sdk:
   flutter_cache_manager: 3.3.1
   flutter_keyboard_visibility: 5.2.0
   flutter_plugin_android_lifecycle: 2.0.17
