--- a/firebase/custom_cloud_functions/package.json
+++ b/firebase/custom_cloud_functions/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "axios": "^0.21.1"
   },
   "private": true
 }
