--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,6 +61,8 @@
     <string>In order to upload data, this app requires permission to access the photo library.</string>
 	<key>PermissionGroupNotification</key>
     <string>We only send you notifications about updates relevant to you.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>Your location allows you to view content personalized to you based on your region.</string>
     <key>UIBackgroundModes</key>
     <array>
         <string>fetch</string>
