--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.1.0+6
+version: 3.1.0+7
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -88,6 +88,7 @@ dependencies:
   image_picker_for_web: 3.0.1
   image_picker_ios: 0.8.8+2
   image_picker_platform_interface: 2.9.1
+  infinite_scroll_pagination: 4.0.0
   internet_file: 1.2.0
   intl: 0.18.1
   json_path: 0.6.2
