--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_core_web: 2.11.5
   firebase_crashlytics: 3.4.17
   firebase_crashlytics_platform_interface: 3.6.24
+  firebase_dynamic_links: 5.4.16
+  firebase_dynamic_links_platform_interface: 0.2.6+24
   firebase_messaging: 14.7.18
   firebase_messaging_platform_interface: 4.5.26
   firebase_messaging_web: 3.6.7
