info.plist change

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,11 @@
     <key>FlutterDeepLinkingEnabled</key>
     <true/>
 
+	<key>FirebaseDynamicLinksCustomDomains</key>
+    <array>
+    <string>https://app.theinspireai.com</string>
+    </array>
+
 
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
