--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,52 +29,52 @@ dependencies:
   auto_size_text: 3.0.0
   badges: 2.0.2
   cached_network_image: 3.3.1
-  cloud_firestore: 4.15.7
-  cloud_firestore_platform_interface: 6.1.8
-  cloud_firestore_web: 3.10.7
-  cloud_functions: 4.6.7
-  cloud_functions_platform_interface: 5.5.18
-  cloud_functions_web: 4.7.1
+  cloud_firestore: 4.17.3
+  cloud_firestore_platform_interface: 6.2.3
+  cloud_firestore_web: 3.12.3
+  cloud_functions: 4.7.4
+  cloud_functions_platform_interface: 5.5.26
+  cloud_functions_web: 4.9.4
   collection: 1.18.0
   country_picker:
-  csv: 5.0.1
+  csv: 6.0.0
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
   equatable: 2.0.5
   expandable: 5.0.1
-  file_picker: 6.1.1
-  firebase_analytics: 10.8.8
-  firebase_analytics_platform_interface: 3.9.8
-  firebase_analytics_web: 0.5.5+20
-  firebase_auth: 4.17.7
-  firebase_auth_platform_interface: 7.1.7
-  firebase_auth_web: 5.9.7
-  firebase_core: 2.26.0
+  file_picker: 8.0.3
+  firebase_analytics: 10.10.5
+  firebase_analytics_platform_interface: 3.10.6
+  firebase_analytics_web: 0.5.7+5
+  firebase_auth: 4.19.5
+  firebase_auth_platform_interface: 7.2.6
+  firebase_auth_web: 5.11.5
+  firebase_core: 2.31.0
   firebase_core_platform_interface: 5.0.0
-  firebase_core_web: 2.11.5
-  firebase_crashlytics: 3.4.17
-  firebase_crashlytics_platform_interface: 3.6.24
+  firebase_core_web: 2.17.0
+  firebase_crashlytics: 3.5.5
+  firebase_crashlytics_platform_interface: 3.6.33
   firebase_dynamic_links: 5.4.16
   firebase_dynamic_links_platform_interface: 0.2.6+24
-  firebase_messaging: 14.7.18
-  firebase_messaging_platform_interface: 4.5.26
-  firebase_messaging_web: 3.6.7
-  firebase_performance: 0.9.3+16
-  firebase_performance_platform_interface: 0.1.4+24
-  firebase_performance_web: 0.1.4+24
-  firebase_storage: 11.6.8
-  firebase_storage_platform_interface: 5.1.11
-  firebase_storage_web: 3.7.2
-  flutter_animate: 4.1.1+1
+  firebase_messaging: 14.9.2
+  firebase_messaging_platform_interface: 4.5.35
+  firebase_messaging_web: 3.8.5
+  firebase_performance: 0.9.4+5
+  firebase_performance_platform_interface: 0.1.4+33
+  firebase_performance_web: 0.1.6+5
+  firebase_storage: 11.7.5
+  firebase_storage_platform_interface: 5.1.20
+  firebase_storage_web: 3.9.5
+  flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   flutter_keyboard_visibility: 5.4.1
-  flutter_plugin_android_lifecycle: 2.0.17
-  flutter_secure_storage: 8.0.0
-  flutter_secure_storage_linux: 1.2.0
-  flutter_secure_storage_macos: 3.0.1
-  flutter_secure_storage_platform_interface: 1.0.2
-  flutter_secure_storage_web: 1.1.2
-  flutter_secure_storage_windows: 2.1.1
+  flutter_plugin_android_lifecycle: 2.0.20
+  flutter_secure_storage: 9.2.2
+  flutter_secure_storage_linux: 1.2.1
+  flutter_secure_storage_macos: 3.1.2
+  flutter_secure_storage_platform_interface: 1.1.2
+  flutter_secure_storage_web: 1.2.1
+  flutter_secure_storage_windows: 3.1.2
   flutter_spinkit: 5.2.0
   flutter_staggered_grid_view: 0.7.0
   flutter_svg: 2.0.9
@@ -87,32 +87,32 @@ dependencies:
   google_sign_in_ios: 5.6.4
   google_sign_in_platform_interface: 2.4.2
   google_sign_in_web: 0.12.1
-  http: 1.2.0
+  http: 1.2.1
   image_picker: 1.0.4
   image_picker_android: 0.8.8
   image_picker_for_web: 3.0.1
   image_picker_ios: 0.8.8+2
   image_picker_platform_interface: 2.9.1
   internet_file: 1.2.0
-  intl: 0.18.1
-  json_path: 0.6.2
+  intl: 0.19.0
+  json_path: 0.7.2
   lottie: 2.7.0
   mime_type: 1.0.0
   onesignal_flutter:
   page_transition: 2.1.0
-  path_provider: 2.0.14
-  path_provider_android: 2.0.25
-  path_provider_foundation: 2.2.2
-  path_provider_platform_interface: 2.0.6
+  path_provider: 2.1.3
+  path_provider_android: 2.2.5
+  path_provider_foundation: 2.4.0
+  path_provider_platform_interface: 2.1.2
   pdfx: 2.6.0
   permission_handler: 11.3.0
   photo_view: 0.14.0
   pin_code_fields: 8.0.1
   plugin_platform_interface: 2.1.8
-  provider: 6.0.5
+  provider: 6.1.2
   purchases_flutter: 6.0.0
   rxdart: 0.27.7
-  share_plus: 7.2.1
+  share_plus: 9.0.0
   shared_preferences: 2.2.2
   shared_preferences_android: 2.2.1
   shared_preferences_foundation: 2.3.4
@@ -125,17 +125,17 @@ dependencies:
   sqflite: 2.2.6
   stream_transform: 2.1.0
   synchronized: 3.1.0
-  timeago: 3.2.2
+  timeago: 3.6.1
   universal_io: 2.2.2
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
-  video_player: 2.8.1
-  video_player_android: 2.4.10
-  video_player_avfoundation: 2.5.1
-  video_player_platform_interface: 6.2.1
-  video_player_web: 2.1.2
+  video_player: 2.8.6
+  video_player_android: 2.4.16
+  video_player_avfoundation: 2.6.1
+  video_player_platform_interface: 6.2.2
+  video_player_web: 2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -143,15 +143,16 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dependency_overrides:
-  device_info_plus: 9.1.0
-  http: 1.2.0
+  device_info_plus: 10.1.0
+  http: 1.2.1
   uuid: ^4.0.0
+  win32: 5.5.1
 
 dev_dependencies:
   flutter_launcher_icons: 0.13.1
-  flutter_lints: 3.0.0
+  flutter_lints: 4.0.0
   image: 4.0.17
-  lints: 3.0.0
+  lints: 4.0.0
 
   flutter_test:
     sdk: flutter
