--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   firebase_performance: 0.9.4+5
   firebase_performance_platform_interface: 0.1.4+33
   firebase_performance_web: 0.1.6+5
+  firebase_remote_config: 4.4.5
+  firebase_remote_config_platform_interface: 1.4.33
+  firebase_remote_config_web: 1.6.5
   firebase_storage: 11.7.5
   firebase_storage_platform_interface: 5.1.20
   firebase_storage_web: 3.9.5
