--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   firebase_crashlytics_platform_interface: 3.6.33
   firebase_dynamic_links: 5.4.16
   firebase_dynamic_links_platform_interface: 0.2.6+24
-  firebase_in_app_messaging: 0.8.0+2
+  firebase_in_app_messaging: ^0.7.5+5
   firebase_messaging: 14.9.2
   firebase_messaging_platform_interface: 4.5.35
   firebase_messaging_web: 3.8.5
