--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_spinkit: 5.2.0
   flutter_staggered_grid_view: 0.7.0
   flutter_svg: 2.0.9
+  flutter_uxcam:
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
